--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,12 @@
 {
     box-sizing: border-box;
 }
+h1 {
+    text-align: center;
+    background-color:lightcoral
+    color： #fffff0;
+    font-size: 5vw;
+}
 form {
     display: flex;
 }
