送信者の名前がわかるように、最初に名前を入れてもらうようにした。 また、socket.io で、送信するデータをobject にして、本文と名前を送信するようにした

--- a/public/style.css
+++ b/public/style.css
@@ -4,12 +4,15 @@
 }
 h1 {
     text-align: center;
-    background-color:lightcoral
-    color： #fffff0;
+    background-color: rgb(45, 87, 155);
+    color: #fff;
     font-size: 5vw;
 }
 form {
     display: flex;
+}
+#form {
+    display: none;
 }
 input,
 button
